fix multi user communication

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,19 +7,13 @@
   var socket = io.connect('http://' + document.domain + ':' + location.port);
 
   socket.on('connect', function () {
-    socket.emit('my event', {
-      data: 'User Connected'
-    })
     var form = $('form.new_message').on('submit', function (e) {
       e.preventDefault()
-      let user_name = $('input.username').val()
       let user_input = $('input.message').val()
       socket.emit('my event', {
-        user_name: user_name,
         message: user_input
       })
       socket.emit('new message', {
-        user_name: user_name,
         message: user_input
       })
       $('input.message').val('').focus()
@@ -27,10 +21,8 @@
   })
   socket.on('my response', function (msg) {
     console.log(msg)
-    if (typeof msg.user_name !== 'undefined') {
-      $('h3').remove()
-      $('div.message_holder').append('<div><b style="color: #000">' + msg.user_name + '</b> ' + msg.message + '</div>')
-    }
+    $('h3').remove()
+    $('div.message_holder').append('<div><b style="color: #000">' + msg.username + ':' +'</b> ' + msg.message + '</div>')
   })
 
 </script>
@@ -65,7 +57,6 @@ User
     <div class="message_holder"></div>
 
     <form action="" class="new_message" method="POST">
-      <input type="text" class="username" placeholder="User Name" />
       <input type="text" class="message" placeholder="Messages" />
       <input type="submit" />
     </form>
