--- a/templates/index.html
+++ b/templates/index.html
@@ -3,29 +3,7 @@
 {% block head %}
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.7.3/socket.io.min.js"></script>
-<script type="text/javascript">
-  var socket = io.connect('http://' + document.domain + ':' + location.port);
-
-  socket.on('connect', function () {
-    var form = $('form.new_message').on('submit', function (e) {
-      e.preventDefault()
-      let user_input = $('input.message').val()
-      socket.emit('my event', {
-        message: user_input
-      })
-      socket.emit('new message', {
-        message: user_input
-      })
-      $('input.message').val('').focus()
-    })
-  })
-  socket.on('my response', function (msg) {
-    console.log(msg)
-    $('h3').remove()
-    $('div.message_holder').append('<div><b style="color: #000">' + msg.username + ':' +'</b> ' + msg.message + '</div>')
-  })
-
-</script>
+<script type="text/javascript" src="{{url_for('static', filename='index.js')}}"></script>
 {% endblock %}
 
 {% block title %}
